Bai Tap Terraform/Bai 3/security_group.tf
resource "aws_security_group" "TFexam-b3_elb-fw-rule" {
  name   = "TFexam-b3_elb-fw-rule"
  vpc_id = module.vpc.vpc_id

  // allow port 80
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  //allow port 443
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }


  egress { //Allow all outbound ports
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
